# object-picker

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake
src/: Canny.cpp  Canny.hpp  Convolution.cpp  Convolution.hpp  Gaussian.cpp  Gaussian.hpp  LinearDisplacement.cpp  LinearDisplacement.hpp  ObjectPicker.cpp  ObjectPicker.hpp  Vaparm.cpp  Vaparm.hpp  XrayFeatures.cpp  XrayFeatures.hpp  canny.cpp  canny.hpp  convolution.cpp  convolution.hpp  gaussian.cpp  gaussian.hpp  image.hpp  main.cpp  math.cpp  math.hpp  parm.hpp  pixel.hpp  pixel16.hpp  pixel32.hpp  pixelRGBA.hpp  pixelf.hpp  vec2.hpp  vec2f.hpp  vec3.hpp  visualdebug.hpp
